# tick-stream

./: .gitignore  AGENTS.md  GM-API.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
config/: watchlist.example.yml
specs/001-tick-anomaly-alerts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tick-anomaly-alerts/checklists/: requirements.md
specs/001-tick-anomaly-alerts/contracts/: cli.md  config.schema.json  feishu-message.md
src/tick_stream/: __init__.py  alerts.py  audit.py  cli.py  config.py  gm_client.py  health.py  live_strategy.py  models.py  notifier.py  replay.py  runner.py  tick_store.py  utils.py
src/tick_stream/detection/: __init__.py  engine.py  features.py  filters.py  momentum.py  normalization.py  orderbook.py  price.py  reporting.py  (+2 more)
tests/: conftest.py
tests/contract/: test_cli_contract.py  test_config_schema.py  test_feishu_payload.py  test_secret_redaction.py
tests/integration/: test_config_update_replay.py  test_live_gm_startup.py  test_notification_retry.py  test_performance_500_symbols.py  test_replay_alert_flow.py  test_success_criteria.py
tests/unit/: test_config_rules.py  test_current_return_context.py  test_feature_snapshot.py  test_feishu_token.py  test_market_filters.py  test_momentum_detector.py  test_orderbook_detector.py  test_price_detector.py  test_reporting.py  test_suppression.py  test_tick_normalization.py  test_tick_store.py
(+6 files in other folders)
